cmake_minimum_required(VERSION 3.21)
project(PA_Laboratorio0)

set(CMAKE_CXX_STANDARD 14)

add_executable(PA_Laboratorio0 main.cpp Sistema.cpp Sistema.h Videojuego.cpp Videojuego.h Partida.cpp Partida.h Jugador.cpp Jugador.h PartidaIndividual.cpp PartidaIndividual.h PartidaMultijugador.cpp PartidaMultijugador.h)
